# docs/swagger.yaml
@@ -40,6 +40,26 @@ definitions:
           $ref: '#/definitions/film_model.Film'
         type: array
     type: object
+  actorfilm.FilmActors:
+    properties:
+      actors:
+        items:
+          $ref: '#/definitions/actor_model.Actor'
+        type: array
+      film:
+        $ref: '#/definitions/film_model.Film'
+    type: object
+  actorfilm.SearchStruct:
+    properties:
+      actors:
+        items:
+          $ref: '#/definitions/actorfilm.ActorFilms'
+        type: array
+      films:
+        items:
+          $ref: '#/definitions/actorfilm.FilmActors'
+        type: array
+    type: object
   film_model.Film:
     properties:
       description:
@@ -122,7 +142,8 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Удаление актера из системы
+      description: Удаление актера из системы. ID актера передается в теле запроса.
+        ID предаствлен строкой UUID.
       operationId: delete-actor
       parameters:
       - description: actor id
@@ -130,14 +151,12 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/github.com_Heater_dog_Vk_Intern_internal_transport_actor.ActorId'
+          $ref: '#/definitions/internal_transport_actor.ActorId'
       produces:
       - application/json
       responses:
         "200":
           description: OK
-          schema:
-            $ref: '#/definitions/transport.RespWriter'
         "400":
           description: Bad Request
           schema:
@@ -163,7 +182,9 @@ paths:
     post:
       consumes:
       - application/json
-      description: Добавление актера в систему
+      description: |-
+        Добавление актера в систему. Проверяется коректность ввода информации, все поля обязтельны.
+        Данные передаются в теле запроса. Дата задается форматом YYYY-MM-DD
       operationId: add-actor
       parameters:
       - description: actor info
@@ -204,7 +225,9 @@ paths:
     put:
       consumes:
       - application/json
-      description: Обновление информации об акетре в системе
+      description: |-
+        Обновление информации об акетре в системе. Можно задать как один параметр на изменение, так и все.
+        Параметры передаются в теле запроса
       operationId: update-actor
       parameters:
       - description: actor fields
@@ -218,8 +241,6 @@ paths:
       responses:
         "200":
           description: OK
-          schema:
-            $ref: '#/definitions/transport.RespWriter'
         "400":
           description: Bad Request
           schema:
@@ -243,8 +264,6 @@ paths:
       - actors
   /actors:
     get:
-      consumes:
-      - application/json
       description: Получение актеров из системы. Вместе с актерами выводится список
         фильмов.
       operationId: get-actors
@@ -257,16 +276,8 @@ paths:
             items:
               $ref: '#/definitions/actorfilm.ActorFilms'
             type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/transport.RespWriter'
         "401":
           description: Unauthorized
-          schema:
-            $ref: '#/definitions/transport.RespWriter'
-        "403":
-          description: Forbidden
           schema:
             $ref: '#/definitions/transport.RespWriter'
         "500":
@@ -282,7 +293,8 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Удаление фильма в системе
+      description: Удаление фильма в системе. Id передается в теле запроса и представлен
+        UUID.
       operationId: delete-film
       parameters:
       - description: actor fields
@@ -296,8 +308,6 @@ paths:
       responses:
         "200":
           description: OK
-          schema:
-            $ref: '#/definitions/transport.RespWriter'
         "400":
           description: Bad Request
           schema:
@@ -323,7 +333,8 @@ paths:
     post:
       consumes:
       - application/json
-      description: Добавление фильма в систему
+      description: Добавление фильма в систему. Все параметры являются обязтельными,
+        кроме списка актеров.
       operationId: add-film
       parameters:
       - description: actor fields
@@ -380,8 +391,6 @@ paths:
       responses:
         "200":
           description: OK
-          schema:
-            $ref: '#/definitions/transport.RespWriter'
         "400":
           description: Bad Request
           schema:
@@ -407,19 +416,19 @@ paths:
     get:
       consumes:
       - application/json
-      description: Получение списка в системе. Сортировка задается параметрами URL
-        order и type
+      description: |-
+        Получение фильмов списка с актерами, участвующими в данном фильме.
+        Сортировка задается параметрами URL: order и type.
+        Если не задать эти параметры, то будет сортировка по убыванию рейтинга
       operationId: get-films
       parameters:
       - description: type of order
         in: query
         name: order
-        required: true
         type: string
       - description: asc or desc
         in: query
         name: type
-        required: true
         type: string
       produces:
       - application/json
@@ -428,7 +437,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/film_model.Film'
+              $ref: '#/definitions/actorfilm.FilmActors'
             type: array
         "400":
           description: Bad Request
@@ -436,10 +445,6 @@ paths:
             $ref: '#/definitions/transport.RespWriter'
         "401":
           description: Unauthorized
-          schema:
-            $ref: '#/definitions/transport.RespWriter'
-        "403":
-          description: Forbidden
           schema:
             $ref: '#/definitions/transport.RespWriter'
         "500":
@@ -451,11 +456,53 @@ paths:
       summary: GetFilms
       tags:
       - films
+  /films/search:
+    get:
+      consumes:
+      - application/json
+      description: |-
+        Поиск фильмов по названию и имени актеров.
+        Выводиться сначала список фильмов, вместе с актерами, принимающих участие.
+        Далее выводится список актеров с фильмами, в кторых они снимались.
+        Запрос передается в параметре search. Список ранжируетя по более точному совпадению.
+      operationId: search-films
+      parameters:
+      - description: search query
+        in: query
+        name: search
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/actorfilm.SearchStruct'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/transport.RespWriter'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/transport.RespWriter'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/transport.RespWriter'
+      security:
+      - ApiKeyAuth: []
+      summary: GetFilmsSearch
+      tags:
+      - films
   /login:
     post:
       consumes:
       - application/json
-      description: Вход в систему. При успешном входе выдаются refresh и access токены.
+      description: |-
+        Вход в систему. При успешном входе выдаются refresh и access токены. Refresh токен храниться
+        в http-only cookie
       operationId: sign-in
       parameters:
       - description: account info
@@ -469,8 +516,6 @@ paths:
       responses:
         "200":
           description: OK
-          schema:
-            type: integer
         "400":
           description: Bad Request
           schema:
